Replace Gulp with improved Webpack config

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,7 @@ resources
 dist
 /data/manifest.json
 .DS_Store
+/themes/habitat/static/assets/main.js
+/themes/habitat/static/assets/main.css
+/themes/habitat/static/assets/main.*.js
+/themes/habitat/static/assets/main.*.css
