--- a/now.json
+++ b/now.json
@@ -12,8 +12,7 @@
     }
   ],
   "routes": [
-    { "src": "^/dist/js/(.*)", "headers": {"cache-control": "public,max-age=31536000,immutable"} },
-    { "src": "^/dist/css/(.*)", "headers": {"cache-control": "public,max-age=31536000,immutable"} },
+    { "src": "^/dist/assets/(.*)", "headers": {"cache-control": "public,max-age=31536000,immutable"} },
     { "src": "^/images/(.*)", "headers": {"cache-control": "max-age=31536000,immutable"} },
     { "src": "^/(.*).html", "headers": {"cache-control": "public,max-age=0,must-revalidate"} },
     { "handle": "filesystem" },
