--- a/themes/habitat/theme.toml
+++ b/themes/habitat/theme.toml
@@ -1,21 +1,12 @@
-# theme.toml template for a Hugo theme
-# See https://github.com/gohugoio/hugoThemes#themetoml for an example
-
 name = "Habitat"
-license = "MIT"
-licenselink = "https://github.com/yourname/yourtheme/blob/master/LICENSE"
+license = "UNLICENSED"
+licenselink = ""
 description = ""
-homepage = "http://example.com/"
+homepage = "https://das-habitat.de/"
 tags = []
 features = []
-min_version = "0.41"
+min_version = "0.55.6"
 
 [author]
-  name = ""
-  homepage = ""
-
-# If porting an existing theme
-[original]
-  name = ""
-  homepage = ""
-  repo = ""
+  name = "Florian Pichler"
+  homepage = "https://florianpichler.de"
