Shuffle our list of professions
Only at build time, but given we rebuild often this should add enought randomness to the page.

--- a/.editorconfig
+++ b/.editorconfig
@@ -21,3 +21,6 @@ insert_final_newline = false
 
 [*.{diff,md}]
 trim_trailing_whitespace = false
+
+[themes/*/layouts/{shortcodes,partials}/**/*.html]
+insert_final_newline = false
