--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ dist
 /themes/habitat/static/assets/main.css
 /themes/habitat/static/assets/main.*.js
 /themes/habitat/static/assets/main.*.css
+/.hugo
