--- a/now.json
+++ b/now.json
@@ -12,7 +12,8 @@
     }
   ],
   "routes": [
-    { "src": "^/dist/assets/(.*)", "headers": {"cache-control": "public,max-age=31536000,immutable"} },
+    { "src": "/imprint.html", "status": 301, "headers": { "Location": "/impressum/" } },
+    { "src": "^/assets/(.*)", "headers": {"cache-control": "max-age=31536000,immutable"} },
     { "src": "^/images/(.*)", "headers": {"cache-control": "max-age=31536000,immutable"} },
     { "src": "^/(.*).html", "headers": {"cache-control": "public,max-age=0,must-revalidate"} },
     { "handle": "filesystem" },
