--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "dev": "HUGO_PATH='./.hugo/hugo' APP_ENV=dev webpack",
     "start": "APP_ENV=dev webpack",
     "now-build": "sh ./download-hugo.sh; HUGO_PATH='./.hugo/hugo' webpack --mode=production",
-    "now-dev": "sh ./download-hugo.sh; HUGO_PATH='./.hugo/hugo' APP_ENV=dev webpack"
+    "now-dev": "sh ./download-hugo.sh; HUGO_PATH='./.hugo/hugo' APP_ENV=dev webpack",
+    "format": "prettier '**/*.scss' --write; prettier '**/*.js' --write"
   },
   "devDependencies": {
     "@babel/core": "^7.5.5",
@@ -34,6 +35,7 @@
   },
   "dependencies": {
     "instant.page": "^1.2.2",
-    "normalize.css": "^8.0.1"
+    "normalize.css": "^8.0.1",
+    "prettier": "^1.18.2"
   }
 }
