--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "UNLICENSED",
   "private": true,
   "engines": {
-    "node" : ">=10"
+    "node": ">=10"
   },
   "scripts": {
     "build": "webpack --mode=production",
@@ -37,5 +37,9 @@
     "instant.page": "^1.2.2",
     "normalize.css": "^8.0.1",
     "prettier": "^1.18.2"
+  },
+  "volta": {
+    "node": "10.16.3",
+    "yarn": "1.17.3"
   }
 }
