--- a/.editorconfig
+++ b/.editorconfig
@@ -12,7 +12,7 @@ insert_final_newline = true
 indent_style = tab
 indent_size = 4
 
-[{package.json,*.{yaml,yml}}]
+[{package.json,*.{yaml,yml},now.json,.prettierrc}]
 indent_style = space
 indent_size = 2
 
