--- a/now.json
+++ b/now.json
@@ -12,6 +12,8 @@
     }
   ],
   "routes": [
+    { "src": "/reparieren", "status": 301, "headers": { "Location": "https://www.notion.so/dashabitat/Repair-Caf-im-Habitat-a97680b273284d63ab28d65a773fb326" } },
+    { "src": "/reparieren/", "status": 301, "headers": { "Location": "https://www.notion.so/dashabitat/Repair-Caf-im-Habitat-a97680b273284d63ab28d65a773fb326" } },
     { "src": "/imprint.html", "status": 301, "headers": { "Location": "/impressum/" } },
     { "src": "^/assets/(.*)", "headers": {"cache-control": "max-age=31536000,immutable"} },
     { "src": "^/images/(.*)", "headers": {"cache-control": "max-age=31536000,immutable"} },
