--- a/config.toml
+++ b/config.toml
@@ -7,3 +7,7 @@ enableRobotsTXT = true
 defaultContentLanguage = "de"
 enableEmoji = true
 resourceDir = ".resources"
+
+[sitemap]
+  changefreq = "monthly"
+  filename = "sitemap.xml"
