--- a/config.toml
+++ b/config.toml
@@ -7,6 +7,7 @@ enableRobotsTXT = true
 defaultContentLanguage = "de"
 enableEmoji = true
 resourceDir = ".resources"
+EnableGitInfo = true
 
 [sitemap]
   changefreq = "monthly"
