--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "format": "prettier '**/*.scss' --write; prettier '**/*.js' --write"
   },
   "devDependencies": {
+    "@11ty/eleventy": "^0.9.0",
     "@babel/core": "^7.5.5",
     "@babel/preset-env": "^7.5.5",
     "@babel/register": "^7.5.5",
     "babel-loader": "^8.0.6",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.2.0",
+    "file-loader": "^4.3.0",
     "mini-css-extract-plugin": "^0.8.0",
     "sass": "^1.22.10",
     "sass-loader": "^8.0.0",
