--- a/data/announcements.yaml
+++ b/data/announcements.yaml
@@ -1,2 +1,3 @@
 - text: Das Habitat bleibt auf Grund der Situation rund um das Coronavirus (COVID-19) vorläufig geschlossen!
   active: true
+  urgent: true
