--- a/data/announcements.yaml
+++ b/data/announcements.yaml
@@ -1,3 +1,3 @@
-- text: Das Habitat bleibt auf Grund der Situation rund um das Coronavirus (COVID-19) vorläufig geschlossen!
+- text: Das Habitat bleibt entsprechend der Verordnung zum Katastrophenfall zur Corona-Pandemie bis mindestens 19. April geschlossen.
   active: true
   urgent: true
