Better word wraps

--- a/data/announcements.yaml
+++ b/data/announcements.yaml
@@ -1,3 +1,3 @@
-- text: Das Habitat bleibt entsprechend der Verordnung zum Katastrophenfall zur Corona-Pandemie bis mindestens 19. April geschlossen.
+- text: Das Habitat bleibt entsprechend der Verordnung zum Katastrophenfall zur Corona-Pandemie bis mindestens 19.&nbsp;April&nbsp;geschlossen.
   active: true
   urgent: true
