--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
   },
   "scripts": {
     "build": "webpack --mode=production",
-    "dev": "HUGO_PATH='./.hugo/hugo' APP_ENV=dev webpack",
-    "start": "APP_ENV=dev webpack",
+    "start": "cross-env APP_ENV=dev webpack --config=webpack.config.js",
     "now-build": "sh ./download-hugo.sh; HUGO_PATH='./.hugo/hugo' webpack --mode=production",
     "now-dev": "sh ./download-hugo.sh; HUGO_PATH='./.hugo/hugo' APP_ENV=dev webpack",
     "format": "prettier '**/*.scss' --write; prettier '**/*.js' --write"
@@ -23,6 +22,7 @@
     "@babel/register": "^7.5.5",
     "babel-loader": "^8.0.6",
     "clean-webpack-plugin": "^3.0.0",
+    "cross-env": "^7.0.2",
     "css-loader": "^3.2.0",
     "file-loader": "^5.1.0",
     "mini-css-extract-plugin": "^0.9.0",
