--- a/data/announcements.yaml
+++ b/data/announcements.yaml
@@ -1,3 +1,3 @@
-- text: Das Habitat bleibt entsprechend der Verordnung zum Katastrophenfall zur Corona-Pandemie bis mindestens 19.&nbsp;April&nbsp;geschlossen.
+- text: Das Habitat bleibt entsprechend der <a href="https://www.verkuendung-bayern.de/files/baymbl/2020/205/baymbl-2020-205.pdf">2. BayIfSMV</a> zur Corona-Pandemie bis mindestens 3.&nbsp;Mai&nbsp;2020 geschlossen. Wir freuen uns über Spenden und Unterstützung in jeder Form und sind hoffentlich bald wieder für euch da.
   active: true
   urgent: true
