--- a/data/termine.yaml
+++ b/data/termine.yaml
@@ -1,4 +1,4 @@
 - text: Werkstatt-Starter Holzwerkstatt.
-  #datefrom: 2020-06-10T10:00:00
-  active: true
-  urgent: true
+  date: "2020-06-10"
+- text: Werkstatt-Starter Metallwerkstatt.
+  date: "2020-04-12"
