--- a/data/announcements.yaml
+++ b/data/announcements.yaml
@@ -1,3 +1,3 @@
-- text: Das Habitat bleibt entsprechend den Änderungen an der <a href="https://www.bayern.de/bericht-aus-der-kabinettssitzung-vom-12-mai-2020/#a-2">4. BayIfSMV</a> zur Corona-Pandemie bis mindestens 29.&nbsp;Mai&nbsp;2020 geschlossen. Wir freuen uns über Spenden und Unterstützung in jeder Form und sind hoffentlich bald wieder für euch da.
+- text: Das Habitat bleibt entsprechend der <a href="https://www.verkuendung-bayern.de/files/baymbl/2020/304/baymbl-2020-304.pdf">5. BayIfSMV</a> zur Corona-Pandemie bis mindestens <strong>14.&nbsp;Juni&nbsp;2020</strong> geschlossen. Wir freuen uns über Spenden und Unterstützung in jeder Form und arbeiten bereits an einem Sicherheitskonzept, um sehr bald wieder für euch da sein zu können.
   active: true
-  urgent: true
+  urgent: false
