--- a/data/announcements.yaml
+++ b/data/announcements.yaml
@@ -1,3 +1,3 @@
-- text: Das Habitat bleibt entsprechend der <a href="https://www.verkuendung-bayern.de/files/baymbl/2020/304/baymbl-2020-304.pdf">5. BayIfSMV</a> zur Corona-Pandemie bis mindestens <strong>14.&nbsp;Juni&nbsp;2020</strong> geschlossen. Wir freuen uns über Spenden und Unterstützung in jeder Form und arbeiten bereits an einem Sicherheitskonzept, um sehr bald wieder für euch da sein zu können.
+- text: Das Habitat darf entsprechend der <a href="https://www.verkuendung-bayern.de/files/baymbl/2020/304/baymbl-2020-304.pdf">5. BayIfSMV</a> zur Corona-Pandemie bald wieder öffnen! Wir arbeiten bereits an einem Sicherheitskonzept, um sehr bald wieder für euch da sein zu können. Wir halten euch auf dem Laufenden und freuen uns über Spenden und Unterstützung in jeder Form.
   active: true
   urgent: false
