--- a/package.json
+++ b/package.json
@@ -36,8 +36,8 @@
     "webpack-shell-plugin": "^0.5.0"
   },
   "dependencies": {
-    "instant.page": "^5.1.0",
-    "normalize.css": "^8.0.1"
+    "normalize.css": "^8.0.1",
+    "prerender_all": "^1.1.0"
   },
   "volta": {
     "node": "12.18.0",
