--- a/config.yaml
+++ b/config.yaml
@@ -10,6 +10,10 @@ defaultContentLanguage: 'de'
 enableEmoji: true
 resourceDir: '.resources'
 
+languages:
+  de:
+    weight: 1
+
 sitemap:
   changefreq: 'monthly'
   filename: 'sitemap.xml'
