--- a/data/announcements.yaml
+++ b/data/announcements.yaml
@@ -1,3 +1,3 @@
-- text: Das Habitat darf entsprechend der <a href="https://www.verkuendung-bayern.de/files/baymbl/2020/304/baymbl-2020-304.pdf">5. BayIfSMV</a> zur Corona-Pandemie bald wieder öffnen! Wir arbeiten bereits an einem Sicherheitskonzept, um sehr bald wieder für euch da sein zu können. Wir halten euch auf dem Laufenden und freuen uns über Spenden und Unterstützung in jeder Form.
+- text: Wir haben wieder geöffnet! Die für Corona geltenden Vorsichtsmaßnahmen erfahrt ihr vor Ort. **Mund-Nasen-Schutz ist Pflicht.**
   active: true
-  urgent: false
+  type: happy
