--- a/config.yaml
+++ b/config.yaml
@@ -13,6 +13,7 @@ resourceDir: '.resources'
 # Site configuration
 
 baseURL: 'https://das-habitat.de'
+buildFuture: true # required for events page
 defaultContentLanguage: 'de'
 languages:
   de:
