--- a/data/intl.yaml
+++ b/data/intl.yaml
@@ -1,11 +1,11 @@
 weekdays:
-  1: 'Montag'
-  2: 'Dienstag'
-  3: 'Mittwoch'
-  4: 'Donnerstag'
-  5: 'Freitag'
-  6: 'Samstag'
-  7: 'Sonntag'
+  Monday: 'Montag'
+  Tuesday: 'Dienstag'
+  Wednesday: 'Mittwoch'
+  Thursday: 'Donnerstag'
+  Friday: 'Freitag'
+  Saturday: 'Samstag'
+  Sunday: 'Sonntag'
 months:
   1: 'Januar'
   2: 'Februar'
