--- a/data/announcements.yaml
+++ b/data/announcements.yaml
@@ -2,4 +2,4 @@
   active: true
   type: happy
 - text: 'Das Habitat macht Urlaub und bleibt vom 21.8-23.8 geschlossen.'
-  active: true
+  active: false
