--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "node": ">=10"
   },
   "scripts": {
+    "start": "gulp",
+    "composer": "cd kirby; composer",
     "format": "prettier '**/*.scss' --write; prettier '**/*.js' --write",
     "gulp": "gulp",
     "kirby": "cd kirby; php -S 0.0.0.0:8000 kirby/router.php"
