--- a/data/sponsoren.yaml
+++ b/data/sponsoren.yaml
@@ -37,7 +37,7 @@
   id: notion
   href: https://www.notion.so
 - name: Peerigon
-  description: "Wir sind eine Augsburger Agentur spezialisiert auf Webentwicklung."
+  description: "Softwareentwicklung Agentur in Augsburg - Peerigon GmbH."
   id: peerigon
   href: https://peerigon.com
 - name: Siegmund
