--- a/kirby/site/blueprints/default.yml
+++ b/kirby/site/blueprints/default.yml
@@ -1,35 +1,44 @@
 title: Default
 preset: page
 
-fields:
-  Text:
-    label: Text
-    type: blocks
-    fieldsets:
-      text:
-        extends: blocks/text
-        fields:
-          classNames:
-            label:
-              de: CSS-Klassen
-              en: CSS Classes
-            type: multiselect
-            options: query
-            query: site.ClassNames.yaml
+sections:
+  content:
+    type: fields
+    fields:
+        Text:
+          label: Text
+          type: blocks
+          fieldsets:
+            - heading
+            - list
+            - image
+            - gallery
+            - video
+            - code
+            - markdown
+            - text:
+              extends: blocks/text
+              fields:
+                classNames:
+                  label:
+                    de: CSS-Klassen
+                    en: CSS Classes
+                  type: multiselect
+                  options: query
+                  query: site.ClassNames.yaml
 
-  StageImage:
-    label: Stage image
-    type: files
-    max: 1
-    min: 0
-    multiple: false
-  StageAlt:
-    label: Image description for the stage image
-    type: text
-    when:
-      StageImage: true
+    StageImage:
+      label: Stage image
+      type: files
+      max: 1
+      min: 0
+      multiple: false
+    StageAlt:
+      label: Image description for the stage image
+      type: text
+      when:
+        StageImage: true
 
 sidebar:
   fields: fields/meta
-
   pages: true
