--- a/kirby/site/blueprints/pages/workshop.yml
+++ b/kirby/site/blueprints/pages/workshop.yml
@@ -1,6 +1,117 @@
-title: Werkstatt
-extends: default
+title:
+  de: Workshop
+  en: workshop
 
-sidebar:
-  pages:
-    template: machine
+columns:
+  left:
+    width: 2/3
+    sections:
+      content:
+        type: fields
+        fields:
+          Text:
+            label: Text
+            type: textarea
+            font: monospace
+          Equipment:
+            width: 1/2
+            label:
+              de: Mitzubringen
+              en: Own Equipment
+            type: textarea
+            size: small
+          Clothing:
+            width: 1/2
+            label:
+              de: Kleidung
+              en: Clothing
+            type: textarea
+            size: small
+          Hints:
+            width: 1/2
+            label:
+              de: Sicherheitshinweise
+              en: Safety hints
+            type: textarea
+            size: small
+          Tags:
+            width: 1/2
+            label:
+              de: Tags
+              en: Tags
+            type: tags
+            min: 1
+            options: query
+            query: page.siblings.pluck("Tags", ",", true)
+      files: true
+  right:
+    width: 1/3
+    fields:
+      CostFee:
+        type: number
+        label:
+          de: Gebühr
+          en: Fee
+        min: 0
+        after: '€'
+      CostMaterial:
+        type: number
+        label:
+          de: Materialkosten
+          en: Material cost
+        min: 0
+        after: '€'
+      Duration:
+        type: number
+        label:
+          de: Dauer
+          en: Duration
+        min: 0
+        default: 0
+        step: 0.5
+        after: 'h'
+      ParticipantsMin:
+        label:
+          de: Mindestteilnehmer
+          en: Minimum participants
+        type: number
+        default: 1
+        min: 1
+      ParticipantsMax:
+        label:
+          de: Maximalteilnehmer
+          en: Maximum participants
+        type: number
+        default: 1
+        min: 1
+      MinimumAge:
+        label:
+          de: Mindestalter
+          en: Minimum age
+        type: select
+        default: kids
+        options:
+          kids:
+            de: Für Kinder
+            en: For kids
+          teens:
+            de: Für Jugendliche
+            en: For teenagers
+          adults:
+            de: Für Erwachsene
+            en: For adults
+      Language:
+        label:
+          de: Kurssprache
+          en: Language
+        type: select
+        default: de
+        options:
+          de:
+            de: Deutsch
+            en: German
+          en:
+            de: Englisch
+            en: English
+
+
