--- a/kirby/site/blueprints/pages/contact.yml
+++ b/kirby/site/blueprints/pages/contact.yml
@@ -1,4 +1,10 @@
 title: Kontakt
-extends: default
+extends: pages/plain
+
 options:
   changeTemplate: false
+
+columns:
+  right:
+    sections:
+      pages: false
