--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "composer": "cd kirby; composer",
     "format": "prettier '**/*.scss' --write; prettier '**/*.js' --write",
     "gulp": "gulp",
-    "kirby": "cd kirby; php -S 0.0.0.0:8000 kirby/router.php"
+    "kirby": "cd kirby; php -S 0.0.0.0:8000 kirby/router.php",
+    "build": "gulp build"
   },
   "devDependencies": {
     "@babel/core": "^7.11.1",
