--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@babel/core": "^7.11.1",
     "@babel/preset-env": "^7.11.0",
     "@babel/register": "^7.10.5",
+    "@rollup/plugin-commonjs": "^17.1.0",
+    "@rollup/plugin-node-resolve": "^11.2.0",
     "autoprefixer": "^10.0.0",
     "browser-sync": "^2.26.12",
     "cross-env": "^7.0.2",
@@ -38,6 +40,8 @@
     "prerender_all": "^1.1.0",
     "prettier": "^2.0.5",
     "rimraf": "^3.0.2",
+    "rollup": "^2.40.0",
+    "rollup-plugin-terser": "^7.0.2",
     "sass": "^1.26.11"
   },
   "volta": {
