--- a/package.json
+++ b/package.json
@@ -13,9 +13,16 @@
   "scripts": {
     "start": "gulp",
     "composer": "cd kirby && composer",
-    "format": "prettier '**/*.scss' --write; prettier '**/*.js' --write",
+    "lint": "npm-run-all -p -c \"lint:!(fix)\"",
+    "lint:php": "prettier \"**/*.php\" --check",
+    "lint:css": "prettier \"**/*.php\" --check",
+    "lint:js": "prettier \"**/*.php\" --check",
+    "lint:fix": "npm-run-all -p -c \"lint:*:fix\"",
+    "lint:php:fix": "prettier \"**/*.php\" --write",
+    "lint:css:fix": "prettier \"**/*.php\" --write",
+    "lint:js:fix": "prettier \"**/*.php\" --write",
     "gulp": "gulp",
-    "kirby": "cd kirby; php -S 127.0.0.1:8000 kirbyrouter.php",
+    "kirby": "cd kirby && php -S 127.0.0.1:8000 kirby/router.php",
     "kirby:win": "cd .\\kirby && php -S 127.0.0.1:8000 .\\kirby\\router.php",
     "build": "gulp build"
   },
@@ -23,6 +30,7 @@
     "@babel/core": "^7.11.1",
     "@babel/preset-env": "^7.11.0",
     "@babel/register": "^7.10.5",
+    "@prettier/plugin-php": "^0.16.1",
     "@rollup/plugin-commonjs": "^17.1.0",
     "@rollup/plugin-node-resolve": "^11.2.0",
     "autoprefixer": "^10.0.0",
@@ -36,17 +44,17 @@
     "gulp-sass": "^4.1.0",
     "gulp-sourcemaps": "^2.6.5",
     "normalize.css": "^8.0.1",
+    "npm-run-all": "^4.1.5",
     "postcss": "^8.0.9",
     "postcss-inline-svg": "^4.1.0",
     "prerender_all": "^1.1.0",
-    "prettier": "^2.0.5",
+    "prettier": "^2.2.1",
     "rimraf": "^3.0.2",
     "rollup": "^2.40.0",
     "rollup-plugin-terser": "^7.0.2",
     "sass": "^1.26.11"
   },
   "volta": {
-    "node": "12.18.0",
-    "yarn": "1.22.4"
+    "node": "14.16.0"
   }
 }
