--- a/kirby/.htaccess
+++ b/kirby/.htaccess
@@ -22,6 +22,10 @@ RewriteEngine on
 #
 RewriteBase /
 
+# Prefer plain domain
+RewriteCond %{HTTP_HOST} ^www\.(.*)$ [NC]
+RewriteRule ^(.*)$ https://%1/$1 [R=301,L]
+
 # block files and folders beginning with a dot, such as .git
 # except for the .well-known folder, which is used for Let's Encrypt and security.txt
 RewriteRule (^|/)\.(?!well-known\/) index.php [L]
