--- a/package.json
+++ b/package.json
@@ -27,37 +27,37 @@
     "build": "gulp build"
   },
   "devDependencies": {
-    "@babel/core": "^7.13.10",
-    "@babel/preset-env": "^7.13.10",
-    "@babel/register": "^7.13.8",
-    "@prettier/plugin-php": "^0.16.1",
-    "@rollup/plugin-commonjs": "^17.1.0",
-    "@rollup/plugin-node-resolve": "^11.2.0",
-    "autoprefixer": "^10.2.5",
-    "browser-sync": "^2.26.14",
-    "cross-env": "^7.0.3",
-    "cssnano": "^4.1.10",
-    "fibers": "^5.0.0",
-    "gulp": "^4.0.2",
-    "gulp-cli": "^2.3.0",
-    "gulp-postcss": "^9.0.0",
-    "gulp-sass": "^4.1.0",
-    "gulp-sourcemaps": "^3.0.0",
-    "normalize.css": "^8.0.1",
-    "npm-run-all": "^4.1.5",
-    "postcss": "^8.2.8",
-    "postcss-inline-svg": "^5.0.0",
-    "prerender_all": "^1.1.0",
-    "prettier": "^2.2.1",
-    "rimraf": "^3.0.2",
-    "rollup": "^2.41.0",
-    "rollup-plugin-terser": "^7.0.2",
-    "sass": "^1.32.8"
+    "@babel/core": "~7.14.3",
+    "@babel/preset-env": "~7.14.4",
+    "@babel/register": "~7.13.16",
+    "@prettier/plugin-php": "~0.16.3",
+    "@rollup/plugin-commonjs": "~19.0.0",
+    "@rollup/plugin-node-resolve": "~13.0.0",
+    "autoprefixer": "~10.2.6",
+    "browser-sync": "~2.26.14",
+    "cross-env": "~7.0.3",
+    "cssnano": "~5.0.5",
+    "fibers": "~5.0.0",
+    "gulp": "~4.0.2",
+    "gulp-cli": "~2.3.0",
+    "gulp-postcss": "~9.0.0",
+    "gulp-sass": "~4.1.0",
+    "gulp-sourcemaps": "~3.0.0",
+    "instant.page": "~5.1.0",
+    "normalize.css": "~8.0.1",
+    "npm-run-all": "~4.1.5",
+    "postcss": "~8.3.0",
+    "postcss-inline-svg": "~5.0.0",
+    "prettier": "~2.3.1",
+    "rimraf": "~3.0.2",
+    "rollup": "~2.51.0",
+    "rollup-plugin-terser": "~7.0.2",
+    "sass": "~1.34.1"
   },
   "volta": {
     "node": "14.16.0"
   },
   "dependencies": {
-    "@splidejs/splide": "^2.4.21"
+    "@splidejs/splide": "~2.4.21"
   }
 }
