--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "@rollup/plugin-commonjs": "~19.0.0",
     "@rollup/plugin-node-resolve": "~13.0.0",
     "autoprefixer": "~10.2.6",
-    "browser-sync": "~2.27.3",
+    "browser-sync": "^2.27.4",
     "cross-env": "~7.0.3",
     "cssnano": "~5.0.6",
     "gulp": "~4.0.2",
@@ -49,7 +49,7 @@
     "postcss-inline-svg": "~5.0.0",
     "prettier": "~2.3.2",
     "rimraf": "~3.0.2",
-    "rollup": "~2.52.3",
+    "rollup": "^2.52.7",
     "rollup-plugin-terser": "~7.0.2",
     "sass": "~1.35.1"
   },
